--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, max-scale=1, user-scalable=no">
         <title><3</title>
-        <link rel="stylesheet" href="/static/main.css">
+        <link rel="stylesheet" href="static/main.css">
     </head>
 
     <body>
         <div class="text"></div>
         <pre id="flower"></pre>
         <div id="proposal" class="proposal_text" aria-hidden="true"></div>
-        <script src="/static/main.js" defer></script>
+        <script src="static/main.js" defer></script>
     </body>
 
 </html>
